appId: com.apple.Preferences
---
- launchApp
- assertVisible: "General"
- tapOn: "General"
- assertVisible: "About"
- tapOn: "About"
- assertVisible: "iOS Version"
